<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/payer_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_tax_payer_category"
            app:layout_constraintBottom_toTopOf="@id/payer_category_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/payer_category_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/zone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payer_category" />

        <TextView
            android:id="@+id/zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_tax_zone"
            app:layout_constraintBottom_toTopOf="@id/zone_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payer_category_sp" />

        <Spinner
            android:id="@+id/zone_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/salary_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zone" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7" />


        <TextView
            android:id="@+id/salary_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/salary_breakdown"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/salary_month"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zone_sp" />

        <TextView
            android:id="@+id/yearly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yearly_amount"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/salary_month"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/zone_sp" />

        <CheckBox
            android:id="@+id/cb_salary_monthly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/salary"
            app:layout_constraintEnd_toStartOf="@id/salary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/salary" />

        <TextView
            android:id="@+id/salary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/monthly_salary"
            app:layout_constraintBottom_toBottomOf="@id/salary_month"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toEndOf="@id/cb_salary_monthly"
            app:layout_constraintTop_toTopOf="@id/salary_month" />

        <EditText
            android:id="@+id/salary_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/salary"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/incentive_value"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/salary"
            app:layout_constraintTop_toBottomOf="@id/salary_tv" />

        <TextView
            android:id="@+id/salary_yearly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_monthly_salary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/salary_month"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/salary_month"
            app:layout_constraintTop_toTopOf="@id/salary_month" />

        <TextView
            android:id="@+id/incentive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/incentive_ot"
            app:layout_constraintBottom_toBottomOf="@id/incentive_total"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/incentive_total" />

        <TextView
            android:id="@+id/incentive_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yearly"
            app:layout_constraintBottom_toBottomOf="@id/incentive_total"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/incentive_total" />

        <EditText
            android:id="@+id/incentive_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/amount"
            android:inputType="number"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/bonus_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/salary_month" />

        <TextView
            android:id="@+id/bonus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/festival_bonus"
            app:layout_constraintBottom_toBottomOf="@id/bonus_total"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bonus_total" />

        <TextView
            android:id="@+id/bonus_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yearly"
            app:layout_constraintBottom_toBottomOf="@id/bonus_total"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/bonus_total" />

        <EditText
            android:id="@+id/bonus_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="amount"
            android:hint="@string/amount"
            android:inputType="number"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/total_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/incentive_total" />

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            app:layout_constraintTop_toTopOf="@id/total_total"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/total_total" />

        <TextView
            android:id="@+id/total_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/taxable_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/bonus_total" />


        <TextView
            android:id="@+id/taxable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_taxable_amount"
            app:layout_constraintTop_toTopOf="@id/taxable_total"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/taxable_total"/>


        <TextView
            android:id="@+id/taxable_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/waiting_to_calculate"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toTopOf="@id/investment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/total_total" />


        <TextView
            android:id="@+id/investment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/investment"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taxable_total"
            app:layout_constraintBottom_toTopOf="@id/eligible"/>

        <TextView
            android:id="@+id/eligible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eligible_amount"
            app:layout_constraintBottom_toBottomOf="@id/eligible_amount"
            app:layout_constraintEnd_toStartOf="@id/eligible_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/eligible_amount"/>

        <TextView
            android:id="@+id/eligible_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/waiting_to_calculate"
            app:layout_constraintBottom_toTopOf="@id/invested_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/eligible"
            app:layout_constraintTop_toBottomOf="@id/investment" />

        <TextView
            android:id="@+id/invested"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/invested_amount"
            app:layout_constraintBottom_toBottomOf="@id/invested_amount"
            app:layout_constraintEnd_toStartOf="@id/invested_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/invested_amount"/>

        <EditText
            android:id="@+id/invested_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="amount"
            android:hint="@string/amount"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/tax_calculation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/invested"
            app:layout_constraintTop_toBottomOf="@id/eligible_amount" />

        <TextView
            android:id="@+id/tax_calculation"
            android:text="@string/tax_calculation"
            android:layout_width="0dp"
            android:gravity="start"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tax"
            app:layout_constraintTop_toBottomOf="@id/invested_amount"/>


        <TextView
            android:id="@+id/tax"
            android:text="@string/total_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tax_pay"
            app:layout_constraintTop_toBottomOf="@id/tax_calculation"/>

        <TextView
            android:id="@+id/tax_pay"
            android:text="@string/tax_have_to_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="15dp"
            app:layout_constraintTop_toBottomOf="@id/tax"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>